# debug_concisely

./: Cargo.toml  LICENSE  README.md
debug_concisely/: Cargo.toml
debug_concisely/src/: lib.rs
debug_concisely_derive/: Cargo.toml
debug_concisely_derive/src/: lib.rs
