[package]
name = "debug_concisely_derive"
version = "0.1.0"
edition = "2024"
description = "Helper crate for debug_concisely"
repository = "https://github.com/akouryy/debug_concisely"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"
syn = "2.0.100"
